

xflr5 v6.14 May xxxth, 2016
	- modified the calculation of stability derivatives to take into account viscous drag and extra drag
	- added mass and CoG position to the list of variables for stability polar graphs
	- corrected issues in the construction of wings with inverse dihedral
	- corrected an error in the calculation of a mode's damped natural frequency
	- fixed a few minor bugs

xflr5 v6.13 April 16th, 2016
	- upgraded to OpenGL 3.0+ from the deprecated OpenGL 1.0
	- improved the lighting options in 3D view
	- improved text rendering on high-DPI (Retina) displays
	- added an option to paint textures on the plane's surfaces
	- added an option to export 3D object geometries to binary stl format
	- added an option to autosave the project at regular time intervals
	- added XCp.Cl as a variable to the plane's polar graphs, and d(XCp.cl)/dCl = XNP to the plane's legend
	- changed the panel force display to q.Cp instead of q.S.panel_area; this is more significant since the arrow lengths are now mesh independent.
	- added the extra drag in the calculation of the plane's total drag coefficient
	- fixed the crash bug when running a multithreaded batch foil analysis
	- fixed the issue of slow display in XInverse design
	- fixed some stability issues in XInverse design
	- interface improvements in XInverse design
	- added a selection option for inertia units
	- changed the display in the foil OpPoint view so that the foil can be overlayed on the graph
	- code cleaning



xflr5 v6.12 January 9th, 2016
	- introduced an option to add extra drag to polar objects, to account for surfaces not included in the plane object
	- restored the plot and export options of the boundary layer graphs after a converged xfoil analysis
	- modified in depth the constuction of the wing geometry, to better account for flap with large deflections; has an impact on results;
	- corrected bugs in the import/export operation of body objects to xml files